--- a/src/blogs/前端基础/TypeScript/4. tsconfig配置文件/2. 编译选项配置.md
+++ b/src/blogs/前端基础/TypeScript/4. tsconfig配置文件/2. 编译选项配置.md
@@ -1,18 +1,28 @@
 # 编译选项配置
+
 ## 加快编译速度
+
 ### incremental
+
 用于设置是否开启增量编译，用于加快编译速度，设置为 true 后只编译修改过的文件。
 
 当`incremental`编译启用时，TypeScript 编译器会在输出目录中生成一个`.tsbuildinfo`文件。这个文件包含了上一次成功编译的信息。在后续的编译中，TypeScript 会利用`.tsbuildinfo`文件中的信息，只重新编译那些自上次编译以来发生变化的文件，从而减少编译时间。
+
 ### tsBuildInfoFile
+
 用于指定存储增量编译信息的文件名和路径：
+
 ```javascript
 "tsBuildInfoFile": "./dist/cache/myproject.tsbuildinfo" // 【文件路径】/【文件名】
 ```
+
 默认存放位置：
+
 - 如果没有指定`outDir`，则`.tsbuildinfo`文件默认会存放在项目的根目录，即与`tsconfig.json`同级的目录。
 - 如果指定了`outDir`，则`.tsbuildinfo`文件通常会存放在`outDir`指定的目录中。这是因为`outDir`决定了编译输出文件的存放位置，包括增量编译信息。
+
 ### composite
+
 该选项允许一个 TypeScript 项目被其他项目引用，并且当其中一个项目改变时只编译改变的项目，而不是全量编译。
 
 设置为 true 会告诉 TypeScript 编译器该项目是一个可以被其他项目引用的独立单元。启用 composite 会自动启用`incremental`编译。
@@ -20,28 +30,39 @@
 如果要开启这个配置，还需要在引用当前项目的另一个项目中配置`references`选项，并将当前项目路径导入。
 
 ### skipLibCheck
+
 布尔值，启用`skipLibCheck`后，TypeScript 编译器将不对项目中或依赖项中的`.d.ts`文件进行类型检查。通过减少对声明文件的检查，编译速度可以得到显著提升，特别是在依赖大量外部库的项目中。
 
 使用这个配置项的前提是必须信任项目中的第三方库的类型声明文件或项目内自己写的类型声明文件的质量。
+
 ### skipDefaultLibCheck
+
 通常情况下，`skipDefaultLibCheck`已经被`skipLibCheck`包含，因此单独使用的场景较少。
 
 布尔值，启用`skipDefaultLibCheck`后，TypeScript 编译器将不对默认库文件（如 lib.d.ts）进行类型检查。这些默认库文件包含了 JavaScript 运行时环境的标准类型定义，例如 ECMAScript 标准 API 和 DOM API。启用这个选项可以加快编译速度，因为编译器不再对这些默认库文件进行类型检查。
+
 ## 配置编译后产物环境
+
 ### target
+
 用于指定编译输出的 ECMAScript 版本。
 
 通过设置`target`，可以控制 TypeScript 编译器将代码转换为哪个版本的 JavaScript。这个选项对于确保编译后的代码在目标环境中能够正确运行非常重要。可选项如下：
+
 - ES3：ECMAScript 3，是所有 JavaScript 运行时的最低通用版本。
 - ES5：ECMAScript 5，广泛支持于现代浏览器和运行时。
-- ES6：ES2015：ECMAScript 2015，包含许多现代 JavaScript特性。
-- ES2016、ES2017、ES2018、ES2019、ES2020、ES2021、ES2022：后续 ECMAScript 版本，逐步引入更多新特性。
+- ES6/ES2015：ECMAScript 2015，包含许多现代 JavaScript特性。
+- ES2016、ES2017、ES2018、ES2019、ES2020、ES2021、ES2022、ES2023、ES2024、ES2025：后续 ECMAScript 版本，逐步引入更多新特性。
 - ESNext：最新的 ECMAScript 草案特性，通常用于实验性功能。
+
 ```javascript
 "target": "es2016"
 ```
+
 ### jsx
+
 指定 TypeScript 编译器如何转换 JSX 语法。TypeScript 支持以下几种`jsx`选项，每种选项对应不同的转换策略：
+
 - `preserve`（默认）：JSX 保留在输出文件中，不进行转换。适合使用其他工具（如 Babel）在后续步骤中处理 JSX 的项目。
 - `react`：将 JSX 转换为`React.createElement`。这是传统的 React 项目中常用的设置。
 - `react-jsx`（TypeScript 4.1+）：将 JSX 转换为`React.createElement`，但使用 React 17+ 的新 JSX 转换。
@@ -49,133 +70,167 @@
 - `react-native`：适用于 React Native 项目，将 JSX 保留为特定的 React Native 格式。
 
 #### 使用场景
+
 - Web 应用开发：在使用 React 开发 Web 应用时，设置`jsx`选项为`react`或`react-jsx`是常见的做法。
 - React Native 开发：对于 React Native 项目，使用`react-native`选项可以确保正确处理 JSX。
 - 工具链集成：如果使用 Babel 或其他工具进行后处理，可能需要将`jsx`设置为`preserve`，以便 JSX 语法能被后续工具正确处理。
+
 ### module
+
 用于指定编译后代码的模块规范。可选值如下：
 |可选值|适用环境|说明|
 |:-:|:-:|:-:|
-|commonjs| Node环境|假设开发的项目需要在 Nodejs 环境中运行，在项目中使用了`import`引入模块，但是Nodejs并不支持，为了使编译后的js文件`import`语句转换为`require`语句，可以配置`"module": "CommonJS"` |
-|`amd`|浏览器环境||
-|`umd`|兼容 Node 环境、浏览器环境、全局变量|常用于库开发，以确保在不同环境中都能正常工作。|
-|`system`|用于 SystemJS 加载器||
-|`es6/es2015/esnext`|现代浏览器和支持 ES Modules 的环境（如 Node.js 12+）||
-|`none`|不生成模块系统代码，用于将 TypeScript 编译为全局脚本||
+|`commonjs`|Node.js 环境或使用 CommonJS 打包器的浏览器环境|将 ES 模块转换为 CommonJS 格式，使用 `require()` 和 `module.exports`。适用于 Node.js 或需要 CommonJS 兼容性的环境。|
+|`amd`|浏览器环境（RequireJS）|将模块转换为 AMD（Asynchronous Module Definition）格式，适用于浏览器端异步模块加载。|
+|`umd`|兼容 Node 环境、浏览器环境、全局变量|将模块转换为 UMD（Universal Module Definition）格式，确保模块在多种环境中都能工作。常用于库开发。|
+|`system`|SystemJS 加载器|将模块转换为 SystemJS 模块格式。|
+|`es6`/`es2015`|现代浏览器和支持 ES Modules 的环境|将模块转换为 ES6 模块语法（`import`/`export`）。适用于现代浏览器或打包工具。|
+|`es2020`/`es2022`/`esnext`|更新的 ES 模块标准|支持更新的 ES 模块特性，如 `import.meta` 等。|
+|`node16`/`nodenext`|Node.js 16+ 的 ES 模块支持|用于 Node.js 的 ECMAScript 模块支持，遵循 Node.js 的模块解析规则。|
+|`preserve`|保留原模块语法|不转换模块语法，保留原始的 `import`/`export` 语句。适用于由其他工具（如 Babel）处理模块转换的项目。|
+|`none`|不生成模块系统代码|不生成任何模块系统代码，将 TypeScript 编译为全局脚本。|
+
 ## 配置编译后产物路径
+
 ### outDir
+
 用于指定编译后的 JavaScript 文件的输出目录。通过设置`outDir`，可以控制 TypeScript 编译器将生成的文件放置在特定的目录中。在多层次目录结构中，`outDir`可以帮助保持输出目录结构与源目录结构一致。
 
 如果在`tsconfig.json`中没有显式指定`outDir`，编译器会将编译后的 JavaScript 文件输出到与源文件相同的目录中。这意味着编译产物将与源代码文件混合在一起。
+
 ```json
 {
-  "compilerOptions": {
-    "target": "ES6",
-    "module": "commonjs",
-    "outDir": "./dist"
-  },
-  "include": ["src/**/*"]
+    "compilerOptions": {
+        "target": "ES6",
+        "module": "commonjs",
+        "outDir": "./dist"
+    },
+    "include": ["src/**/*"]
 }
 ```
+
 上述代码中：
+
 - `outDir`设置为`./dist`，意味着编译器将把所有编译后的文件输出到`dist`目录中。
 - 编译后，`src`中的文件将被输出到`dist`中，保持相同的目录结构。
+
 ### outFile
-布尔值，用于将所有编译后的 JavaScript 文件合并成一个单独的输出文件。这个选项通常用于需要将多个模块或文件打包成一个文件的场景，例如在浏览器中使用时减少 HTTP 请求的数量。前提是`module`选项被设置成`system`或者`amd`，因为这些模块系统支持在浏览器中动态加载模块。
+
+字符串类型，用于指定将所有编译后的 JavaScript 文件合并成的单独输出文件的路径。这个选项通常用于需要将多个模块或文件打包成一个文件的场景，例如在浏览器中使用时减少 HTTP 请求的数量。前提是`module`选项被设置成`system`或者`amd`，因为这些模块系统支持在浏览器中动态加载模块。
+
 #### 为什么 ESM 不能用`outFile`配置项
+
 这是由于 ES6 模块的特性和设计与 outFile 的功能相冲突。
+
 - ES6 模块的特性：
-  - 静态分析：ES6 模块是基于静态分析的，这意味着模块依赖关系是在编译时确定的，而不是在运行时动态解析的。
-  - 作用域隔离：每个 ES6 模块都有自己的作用域，不会污染全局作用域。这种设计与将所有代码合并到一个文件中的 outFile 选项不兼容，因为合并可能会导致作用域冲突。
+    - 静态分析：ES6 模块是基于静态分析的，这意味着模块依赖关系是在编译时确定的，而不是在运行时动态解析的。
+    - 作用域隔离：每个 ES6 模块都有自己的作用域，不会污染全局作用域。这种设计与将所有代码合并到一个文件中的 outFile 选项不兼容，因为合并可能会导致作用域冲突。
 - 动态加载和按需加载：
-  - ES6 模块支持原生的动态导入（通过`import()`），并且模块可以按需加载。这种特性与将所有模块合并到一个文件的做法相悖，因为合并后就失去了按需加载的优势。
+    - ES6 模块支持原生的动态导入（通过`import()`），并且模块可以按需加载。这种特性与将所有模块合并到一个文件的做法相悖，因为合并后就失去了按需加载的优势。
 - 现代构建工具的普及：
-  - 在现代 JavaScript 开发中，工具如 Webpack、Rollup 等已经成为处理模块打包的标准选择。这些工具能够更好地处理 ES6 模块的特性，包括代码分割、按需加载和动态导入。
-这些工具提供了比 TypeScript 自带的 outFile 功能更强大和灵活的打包选项。
+    - 在现代 JavaScript 开发中，工具如 Webpack、Rollup 等已经成为处理模块打包的标准选择。这些工具能够更好地处理 ES6 模块的特性，包括代码分割、按需加载和动态导入。
+      这些工具提供了比 TypeScript 自带的 outFile 功能更强大和灵活的打包选项。
+
 ## 配置编译后产物
+
 ### removeComments
+
 布尔值，用于指定是否将编译后的文件注释删掉，设为`true`的话即删除注释，默认为`false`
+
 ### noEmit
+
 布尔值，用于控制编译过程是否生成输出文件。当启用`noEmit`时，TypeScript 编译器会进行类型检查，但不会生成任何 JavaScript 文件、`.d.ts`文件或其他输出文件。
 
 使用场景：
+
 - 类型验证：在持续集成（CI）环境中，可以使用 noEmit 选项来仅进行类型检查，而不需要生成输出文件。
 - 快速反馈：在开发过程中，可以通过启用 noEmit 来快速验证代码的类型正确性，而不生成任何文件。
 - 代码审查：在代码审查过程中，可以使用 noEmit 选项来确保代码符合类型检查标准，而不生成实际的构建产物。
+
 ### importHelpers
+
 布尔值，用于优化生成代码的大小和性能。启用`importHelpers`后，TypeScript 编译器会使用外部模块（如 tslib）中的辅助函数，而不是在每个生成的文件中嵌入这些辅助函数。这可以减少重复代码，从而减小生成文件的体积。
 
 ### downlevelIteration
+
 布尔值，启用此选项后，在编译到较低版本的 JavaScript 时（如 ES5），生成额外的代码，从而支持更高级的迭代器和生成器特性。如` for...of`循环、解构赋值等。
+
 ### noEmitOnError
+
 布尔值，当启用时，如果 TypeScript 编译过程中出现任何错误，编译器将不会生成任何输出文件。这可以帮助确保只有在代码没有类型错误时才生成可执行的 JavaScript 文件。
+
 ### preserveConstEnums
+
 布尔值，用于控制在编译过程中是否保留`const enum`声明。在默认情况下，使用`const`修饰符后，枚举不会生成映射代码。在需要跨模块使用`const enum`时，保留声明可以确保枚举在模块之间的一致性。
+
 ```typescript
 const enum RequestMethod {
-  Get,
-  Post,
-  Put,
-  Delete
+    Get,
+    Post,
+    Put,
+    Delete,
 }
 
-let methods = [
-  RequestMethod.Get,
-  RequestMethod.Post
-]
+let methods = [RequestMethod.Get, RequestMethod.Post];
 ```
+
 如下，我们可以看出：使用`const`修饰符后，编译器不会生成`RequestMethod`枚举的任何映射代码
+
 ```typescript
-"use strict";
-let methods = [
-    0 /* Get */,
-    1 /* Post */
-];
+'use strict';
+let methods = [0 /* Get */, 1 /* Post */];
 ```
+
 当然，我们希望生成映射代码时，也可以设置 tsconfig.json 中的配置，设置`preserveConstEnums`编译器选项为`true`
 
 最后编译结果变成：
+
 ```typescript
-"use strict";
+'use strict';
 var RequestMethod;
 (function (RequestMethod) {
-    RequestMethod[RequestMethod["Get"] = 0] = "Get";
-    RequestMethod[RequestMethod["Post"] = 1] = "Post";
-    RequestMethod[RequestMethod["Put"] = 2] = "Put";
-    RequestMethod[RequestMethod["Delete"] = 3] = "Delete";
+    RequestMethod[(RequestMethod['Get'] = 0)] = 'Get';
+    RequestMethod[(RequestMethod['Post'] = 1)] = 'Post';
+    RequestMethod[(RequestMethod['Put'] = 2)] = 'Put';
+    RequestMethod[(RequestMethod['Delete'] = 3)] = 'Delete';
 })(RequestMethod || (RequestMethod = {}));
-let methods = [
-    0 /* Get */,
-    1 /* Post */
-];
+let methods = [0 /* Get */, 1 /* Post */];
 ```
+
 ### isolatedModules
+
 布尔值，用于确保每个 TypeScript 文件可以单独作为一个模块进行编译。启用此选项后，TypeScript 编译器会对每个文件进行独立的语法检查和编译，而不依赖于项目中的其他文件。这对于使用 Babel 等工具进行后续处理的项目非常有用，因为这些工具通常也是以文件为单位进行编译的。
 
 `isolatedModules: true`：
+
 - 独立编译：强制每个文件独立编译，编译器不会跨文件进行类型检查或推断，适合与文件级编译工具集成，但限制了一些 TypeScript 特性并且编译器无法在文件间共享类型信息。
 - 限制：由于每个文件必须独立编译，某些 TypeScript 特性可能无法使用，例如：
-  - 命名空间（namespace）：因为命名空间通常需要跨文件进行合并。
-  - 常量枚举（const enum）：这些枚举在编译时被内联，无法跨模块边界使用。
-  - 导入类型：某些类型信息可能无法在独立编译时正确解析。
+    - 命名空间（namespace）：因为命名空间通常需要跨文件进行合并。
+    - 常量枚举（const enum）：这些枚举在编译时被内联，无法跨模块边界使用。
+    - 导入类型：某些类型信息可能无法在独立编译时正确解析。
 - 适用场合：适用于需要与 Babel 等工具集成的项目，或者需要确保每个文件可以独立编译的模块化项目。
 
 `isolatedModules: false`：
+
 - 项目范围编译：TypeScript 会在项目范围内进行类型检查和推断，允许跨文件类型检查和优化，支持完整的 TypeScript 特性，但不适合与某些工具（如 Babel）集成。
 - 完整特性支持：支持所有 TypeScript 特性，包括命名空间、常量枚举等，因为编译器可以跨文件进行处理。
 - 适用场合：适用于不需要与文件级别编译工具集成的项目，尤其是需要完整类型检查和跨文件优化的项目。
 
 ## 配置环境
+
 ### lib
+
 用于指定项目中要使用的库或运行环境，例如 ECMAScript 的不同版本、DOM API、Web Worker API 等。通过包含适当的库，可以获得更准确的类型检查和更好的开发体验，因为 TypeScript 编译器会根据这些库文件进行类型推断和检查。
 
 常用的库包括：
+
 - ES5, ES6（或ES2015）, ES2016, ES2017, ES2018, ES2019, ES2020, ES2021, ES2022：不同版本的 ECMAScript 标准库。
 - DOM：浏览器环境中的文档对象模型（DOM）API。
 - `DOM.Iterable`：支持迭代协议的 DOM API。
 - WebWorker：Web Worker 环境的 API。
 - ScriptHost：Windows Script Host 环境的 API。
 - ESNext：最新的 ECMAScript 草案特性。
+
 ```javascript
 {
   "compilerOptions": {
@@ -186,18 +241,26 @@ let methods = [
   }
 }
 ```
+
 注意：如果未指定`lib`，TypeScript 编译器会根据`target`选项的值来自动包含一组默认的库。这些默认库通常涵盖了目标 ECMAScript 版本的标准特性：
+
 - 如果`target`设置为 ES5 将注入`DOM,ES5,ScriptHost`
 - 如果`target`设置为 ES6 将注入`DOM,ES6,DOM.Iterable,ScriptHost`
+
 ### experimentalDecorators
+
 布尔值，指定是否启用实验性的装饰器特性。需要注意的是：
+
 - 实验性特性：由于装饰器是实验性特性，可能会在未来的 ECMAScript 标准中发生变化。
 - 兼容性：确保运行环境（如 Babel、TypeScript 编译器版本）支持装饰器语法。
 - 在使用装饰器时，通常还需要启用`emitDecoratorMetadata`选项，以生成运行时类型元数据（如果需要）。
+
 ### emitDecoratorMetadata
+
 布尔值，用于在使用装饰器时生成额外的元数据。这些元数据可以在运行时被装饰器访问，用于增强装饰器的功能，特别是在依赖注入和反射等场景中。
 
 关于元数据，也是 ES6 的新标准，可以通过`Reflect`提供的静态方法获取元数据，如果需要使用`Reflect`的一些方法，需要在`lib`中引用`ES2015.Reflect`这个库
+
 ```javascript
 import 'reflect-metadata';
 
@@ -215,85 +278,141 @@ class Example {
 
 // 输出: myMethod type: Function
 ```
+
 #### ES2015.Reflect 和 reflect-metadata
+
 ES2015.Reflect：
+
 - 用途：ES2015.Reflect 是 ECMAScript 2015（ES6）标准的一部分，提供了一组用于操作对象的静态方法。通过在`tsconfig.json`中的`lib`选项中指定`ES2015.Reflect`，你可以使用这些方法，如`Reflect.apply`、`Reflect.construct`、`Reflect.get`等。
 - 在`tsconfig.json`中指定`ES2015.Reflect`只是为了让 TypeScript 编译器支持这些方法的类型检查和智能提示。
 
 reflect-metadata：
+
 - `reflect-metadata`是一个独立的库，用于支持 TypeScript 装饰器的元数据反射。
 - 通过`reflect-metadata`，可以在运行时获取有关类、方法、属性和参数的类型信息。这是通过`Reflect.metadata`方法实现的，这个方法并不是`ES2015.Reflect`的一部分。
 - 引入：即使在`lib`中指定了`ES2015.Reflect`，如果项目需要使用装饰器元数据，仍然需要在代码中引入`reflect-metadata`。通常，这在项目的入口文件中引入一次即可：
+
 ## 配置模块解析
+
 ### moduleResolution
+
 用于指定模块解析策略。模块解析决定了 TypeScript 如何查找和加载模块的定义文件（如`.ts`或`.d.ts`文件）。主要的模块解析策略如下：
+
 - `node`：默认值，模仿 Node 的模块解析逻辑。适合于大多数现代 JavaScript 项目，比如 Node 环境或使用类似于 Node 模块加载机制的工具（如 Webpack）。
-  - 查找路径如下：
-    - 首先查找相对路径模块（如 ./moduleA）。
-    - 然后查找非相对路径模块（如 moduleA）：
-      - 查找 node_modules 目录。
-      - 递归向上查找父目录中的 node_modules。
+    - 查找路径如下：
+        - 首先查找相对路径模块（如 ./moduleA）。
+        - 然后查找非相对路径模块（如 moduleA）：
+            - 查找 node_modules 目录。
+            - 递归向上查找父目录中的 node_modules。
+- `node16`/`nodenext`：用于 Node.js 的 ECMAScript 模块支持，遵循 Node.js 的模块解析规则。
+- `bundler`（TypeScript 5.0+）：适用于现代打包器（如 Vite、Webpack、esbuild、Rollup 等），假设打包器会处理模块解析。此选项会启用一些假设，例如支持 `package.json` 的 `exports` 和 `imports` 字段，并允许省略文件扩展名。
 - `classic`：TypeScript 1.6 之前的默认解析策略。不推荐用于现代项目，因为它不支持 Node 的模块解析特性。
-  - 查找顺序：
-    - 直接查找相对路径。
-    - 不支持 node_modules 的递归查找。
+    - 查找顺序：
+        - 直接查找相对路径。
+        - 不支持 node_modules 的递归查找。
+
 #### 影响模块解析的其他选项
+
 - baseUrl：定义非相对模块导入的基准目录。
 - paths：定义模块路径的别名和映射。
 - rootDirs：指定多个目录，编译时被视为一个逻辑目录。
 - typeRoots 和 types：控制类型声明文件的查找和加载。
+
 ### resolveJsonModule
+
 默认`false`，用于指定是否允许在 TypeScript 项目中导入 JSON 文件并将其视为模块。启用后 TypeScript 会根据 JSON 文件的内容自动推断出相应的类型。
 
 在某些情况下，特别是当使用`import`语法导入 JSON 文件时，可能需要同时启用`esModuleInterop`选项，以确保兼容性。
+
 ```javascript
-import config from './config.json'
-console.log(config)
+import config from './config.json';
+console.log(config);
 ```
+
 当开启`resolveJsonModule`，但不开启`esModuleInterop`时，导入 JSON 文件应该使用`import * as`
+
 ```javascript
 import * as config from './config.json';
 ```
+
 ### esModuleInterop
+
 布尔值，启用`esModuleInterop`后，可以使用`import`语法导入 CommonJS 模块的默认导出，而不需要使用`import * as`的语法。当项目中引入了很多第三方 CommonJS 规范的包时或者需要使用 CommonJS 规范的文件时，可以使用这个配置项。
 
 `esModuleInterop`会隐式启用`allowSyntheticDefaultImports`，这允许你在没有默认导出的模块中使用默认导入语法。
+
 ### allowSyntheticDefaultImports
+
 布尔值，是否允许开发者在不支持默认导出的模块中使用默认导入语法。启用`allowSyntheticDefaultImports`后，可以使用默认导入语法（`import x from 'module'`）来导入那些实际上没有默认导出的模块。如 CommonJS 模块、JSON 文件
 
 #### 和`esModuleInterop`的区别
+
 allowSyntheticDefaultImports：
+
 - 仅用于简化导入语法，允许在没有默认导出的模块中使用默认导入。
 - 不会改变生成的 JavaScript 代码的模块格式。
 
 esModuleInterop：
+
 - 包含了 allowSyntheticDefaultImports 的功能。
 - 通过自动添加辅助函数改善生成代码的模块导入行为，使其更符合 ECMAScript 模块的标准。
+
+### moduleDetection
+
+字符串，控制 TypeScript 如何检测文件是否为模块。可选值：
+
+- `"auto"`（默认）：根据文件内容自动检测（如是否存在 `import`/`export` 语句）。
+- `"force"`：将所有文件视为模块。
+- `"legacy"`：使用 TypeScript 4.x 及更早版本的模块检测行为。
+
+### verbatimModuleSyntax
+
+布尔值，启用后 TypeScript 会严格按照模块语法进行编译，不会对模块进行任何转换或重写。这有助于确保模块语法的准确性，避免意外的模块转换行为。当启用此选项时，`import type` 和 `export type` 语句会被保留，而非类型导入会被转换为 `require()` 调用（如果模块系统是 CommonJS）。
+
+### allowImportingTsExtensions
+
+布尔值，允许在导入语句中直接使用 `.ts`、`.tsx`、`.mts`、`.cts` 等 TypeScript 文件扩展名。默认情况下，TypeScript 要求导入语句省略扩展名。启用此选项后，可以显式指定 TypeScript 文件扩展名，这在某些工具链中可能有用。
+
+### resolvePackageJsonExports 和 resolvePackageJsonImports
+
+布尔值，控制 TypeScript 是否解析 `package.json` 中的 `exports` 和 `imports` 字段。这些字段是 Node.js 的包导出映射机制，用于定义包的入口点和条件导出。默认情况下，当 `moduleResolution` 设置为 `node16`、`nodenext` 或 `bundler` 时，这些选项会自动启用。
+
+### customConditions
+
+字符串数组，指定自定义的包解析条件。当解析 `package.json` 的 `exports` 或 `imports` 字段时，TypeScript 会使用这些条件来确定应该使用哪个导出。例如，可以添加 `["my-custom-condition"]` 来支持特定于项目的解析条件。
+
 ## 配置解析路径
+
 ### rootDir
+
 用于指定项目的根目录，即编译器将从哪个目录开始解析和编译 TypeScript 文件。TypeScript 项目的默认的根目录为`tsconfig.json`文件所在的目录，所有的相对路径都是相对于这个根目录的。可以通过rootDir选项，更改项目的根目录位置。
+
 ```javascript
 // 假设目录结构如下
--- src
-	version1
-		test.ts
-	version2
-		demo.ts
+--src;
+version1;
+test.ts;
+version2;
+demo.ts;
 // 如果设置 "rootDir": "./src"
 // 那么的编译后的文件结构如下，需要注意的是项目中除了src目录中，其他地方不能有ts文件了
---build
-	version1
-		test.ts
-	version2
-		demo.ts
+--build;
+version1;
+test.ts;
+version2;
+demo.ts;
 ```
+
 通常 rootDir 会与 outDir 一起使用，以确保输出目录结构与源目录结构一致。
 
 需要注意的是：`include`选项的路径是相对于`tsconfig.json`文件所在的目录，而不是相对于`rootDir`。`rootDir`选项主要用于指定源文件的逻辑根目录，以确定输出目录结构，而不影响`include`的路径解析。
+
 ### rootDirs
+
 用于指定多个根目录，在编译时编译器会将这个路径中的内容都放到一个文件夹中。这个选项主要用于处理多个源目录的场景，尤其是在构建大型项目或 monorepo 仓库时。
 
 假设我们有一个项目，其中的源代码分布在`client`和`server`两个目录中。我们希望在编译时能够将这两个目录视为同一个逻辑目录，以便在代码中相互引用。项目目录如下：
+
 ```text
 /project
   ├── client
@@ -303,7 +422,9 @@ esModuleInterop：
   │   └── main.ts
   └── tsconfig.json
 ```
+
 文件内容如下：
+
 ```javascript
 // client/utils/helper.ts
 export function greet(name: string): string {
@@ -315,35 +436,44 @@ import { greet } from '../client/utils/helper';
 
 console.log(greet('World'));
 ```
+
 为了让`server/main.ts`能够引用`client/utils/helper.ts`，可以使用 rootDirs 配置：
+
 ```json
 {
-  "compilerOptions": {
-    "target": "ES6",
-    "module": "commonjs",
-    "rootDirs": ["./client", "./server"],
-    "outDir": "./dist"
-  },
-  "include": ["client/**/*", "server/**/*"]
+    "compilerOptions": {
+        "target": "ES6",
+        "module": "commonjs",
+        "rootDirs": ["./client", "./server"],
+        "outDir": "./dist"
+    },
+    "include": ["client/**/*", "server/**/*"]
 }
 ```
+
 编译后目录如下：
+
 ```text
 /dist
   ├── utils
   │   └── helper.js
   └── main.js
 ```
+
 需要注意的是：
+
 - 在使用`rootDirs`时，确保在代码中使用相对路径引用模块，以便 TypeScript 编译器能够正确解析这些路径。
 - 也可以与`path`一起使用，通过配置路径别名来引用模块。
 - `rootDirs`仅影响编译时的路径解析，不会改变输出目录的结构。输出结构由`outDir`和其他相关选项决定。
+
 ### baseUrl
+
 用于设置模块解析的基本路径。当在代码中使用相对路径导入模块时，TypeScript 会从`baseUrl`开始解析这些路径。通常与 paths 选项一起使用，以支持路径别名。
 
 在`tsconfig.json`中设置`baseUrl`为`./src`，意味着所有模块导入的相对路径将从`src`目录开始解析。
 
 假设有如下项目结构：
+
 ```text
 /project
   ├── src
@@ -354,22 +484,26 @@ console.log(greet('World'));
   │   └── index.ts
   └── tsconfig.json
 ```
+
 希望在`index.ts`中导入`button.ts`和`helper.ts`时使用简化路径：
+
 ```json
 {
-  "compilerOptions": {
-    "target": "ES6",
-    "module": "commonjs",
-    "baseUrl": "./src", // 意味着所有模块导入的相对路径将从 src 目录开始解析
-    "paths": {
-      "@components/*": ["components/*"],
-      "@utils/*": ["utils/*"]
-    }
-  },
-  "include": ["src/**/*"]
+    "compilerOptions": {
+        "target": "ES6",
+        "module": "commonjs",
+        "baseUrl": "./src", // 意味着所有模块导入的相对路径将从 src 目录开始解析
+        "paths": {
+            "@components/*": ["components/*"],
+            "@utils/*": ["utils/*"]
+        }
+    },
+    "include": ["src/**/*"]
 }
 ```
+
 文件内容：
+
 ```typescript
 import { Button } from '@components/button';
 import { helperFunction } from '@utils/helper';
@@ -377,21 +511,31 @@ import { helperFunction } from '@utils/helper';
 const button = new Button();
 helperFunction();
 ```
+
 #### 和`rootDir`的区别
+
 `rootDir`用于指定源文件的根目录。它帮助 TypeScript 确定输出目录结构，以便在`outDir`中重现源文件的目录结构。 `rootDir`影响的是编译输出的目录结构，而不是模块解析的起点。
+
 - 示例：在`tsconfig.json`中设置`rootDir`为`./src`，意味着编译器将`src`作为源文件的根目录，并在`outDir`中重现其结构。
+
 ### paths
+
 用于配置模块路径的映射。它通常与`baseUrl`结合使用，以支持路径别名。`baseUrl`定义了模块解析的基准目录，而`paths`定义了从这个基准目录开始的路径映射。
 
 `paths`通配符遵循简单的模式匹配规则，主要使用`*`作为通配符：
+
 1. `*`通配符：
-  - `*`可以匹配零个或多个目录或文件名的一部分。
-  - 通配符必须在路径的末尾，并且可以出现在路径的多个部分中。
+
+- `*`可以匹配零个或多个目录或文件名的一部分。
+- 通配符必须在路径的末尾，并且可以出现在路径的多个部分中。
+
 2. 匹配规则：
-  - 在`paths`中，`*`通配符用于定义路径模板。
-  - 在路径映射中，`*`通配符的匹配部分会被替换为实际导入路径中的对应部分。
+
+- 在`paths`中，`*`通配符用于定义路径模板。
+- 在路径映射中，`*`通配符的匹配部分会被替换为实际导入路径中的对应部分。
 
 假设项目结构如下：
+
 ```text
 /project
   ├── src
@@ -402,22 +546,26 @@ helperFunction();
   │   └── index.ts
   └── tsconfig.json
 ```
+
 `tsconfig.json`配置
+
 ```json
 {
-  "compilerOptions": {
-    "target": "ES6",
-    "module": "commonjs",
-    "baseUrl": "./src",
-    "paths": {
-      "@components/*": ["components/*"],
-      "@utils/*": ["utils/*"]
-    }
-  },
-  "include": ["src/**/*"]
+    "compilerOptions": {
+        "target": "ES6",
+        "module": "commonjs",
+        "baseUrl": "./src",
+        "paths": {
+            "@components/*": ["components/*"],
+            "@utils/*": ["utils/*"]
+        }
+    },
+    "include": ["src/**/*"]
 }
 ```
+
 文件内容
+
 ```javascript
 import { Button } from '@components/button';
 import { helperFunction } from '@utils/helper';
@@ -425,14 +573,18 @@ import { helperFunction } from '@utils/helper';
 const button = new Button();
 helperFunction();
 ```
+
 ### preserveSymlinks
+
 布尔值，用于控制在模块解析过程中是否保留符号链接（symlinks）。启用此选项后，TypeScript 在解析模块时将保留符号链接路径，而不是解析到它们的真实路径。这与 Node 的`--preserve-symlinks`选项类似。
 
 作用：
+
 - 启用`preserveSymlinks`可以帮助在开发环境中保持路径的一致性，避免由于符号链接解析导致的路径不一致问题。
 - 在调试和构建过程中，确保 Node 和 TypeScript 的符号链接处理方式一致，以避免模块解析错误。
 
 假设有一个 Monorepo 项目结构，其中包含多个包。使用符号链接来管理这些包之间的依赖关系。
+
 ```text
 /monorepo
   ├── packages
@@ -447,6 +599,7 @@ helperFunction();
   │       └── utils -> ../../packages/utils (symlink)
   └── tsconfig.json
 ```
+
 在这个例子中，`utils`包被符号链接到`node_modules`中，作为`core`包的依赖。
 
 ```typescript
@@ -456,13 +609,17 @@ utilityFunction();
 
 // utils/index.ts
 export function utilityFunction() {
-  console.log('Utility function');
+    console.log('Utility function');
 }
 ```
+
 - 启用 preserveSymlinks：TypeScript 在解析`@my-org/utils`模块时会保留符号链接路径。这意味着它会使用符号链接路径`node_modules/@my-org/utils`而不是解析到实际的文件系统路径`packages/utils`。这与 Node 在使用`--preserve-symlinks`时的行为一致，确保在开发和运行时模块解析路径的一致性。
 - 不启用 preserveSymlinks：TypeScript 会解析符号链接到其目标路径，即`packages/utils`。这可能导致不同的模块解析路径，特别是在开发和生产环境中使用不同的工具链时。
+
 ## 类型声明文件
+
 ### typeRoots
+
 字符串数组，用于指定类型声明文件（即`.d.ts`文件）的根目录。通过配置`typeRoots`，可以控制 TypeScript 编译器在编译时从哪些目录中加载类型声明文件至全局。
 
 默认情况下，TypeScript 会从`node_modules/@types`目录中加载类型声明文件。这是因为许多第三方库的类型声明文件通常放置在这个目录中。
@@ -472,18 +629,22 @@ export function utilityFunction() {
 当设置了`typeRoots`后，TypeScript 仅从指定的目录中加载类型声明文件，不再自动加载`node_modules/@types`中的文件，除非它被包含在`typeRoots`中。
 
 如果指定多个`typeRoots`会按照出现的顺序进行查找。如果在不同的`typeRoots`目录中存在同名的类型声明文件，TypeScript 不会合并这些文件，而是使用第一个找到的文件。这与模块解析中的合并行为不同。
+
 ```json
 {
-  "compilerOptions": {
-    "target": "ES6",
-    "module": "commonjs",
-    "typeRoots": ["./types", "./node_modules/@types"]
-  },
-  "include": ["src/**/*"]
+    "compilerOptions": {
+        "target": "ES6",
+        "module": "commonjs",
+        "typeRoots": ["./types", "./node_modules/@types"]
+    },
+    "include": ["src/**/*"]
 }
 ```
+
 ### types
+
 字符串数组，用于选择性地加载**依赖包**的类型声明包，而不是加载所有可用的包。如果没有指定`types`，TypeScript 会自动加载`typeRoots`指定目录下的所有类型声明包。
+
 ```javascript
 {
   "compilerOptions": {
@@ -494,12 +655,15 @@ export function utilityFunction() {
   "include": ["src/**/*"]
 }
 ```
+
 上述配置告诉 TypeScript 从`node_modules/@types`目录中只加载`@types/node`和`@types/jest`中的类型声明文件；并且也会自动加载`src`目录下的所有`.d.ts`文件。
 
 ### declaration
+
 布尔值，启用`declaration`选项后，TypeScript 编译器会为每个 TypeScript 文件生成对应的`.d.ts`文件。生成的声明文件中包含的是 TypeScript 文件中导出的类型或非类型代码对应的类型。通常与`outDir`结合使用，以确保生成的`.d.ts`文件和编译后的 JavaScript 文件位于同一输出目录。
 
 假设项目目录如下：
+
 ```text
 /project
   ├── src
@@ -507,27 +671,34 @@ export function utilityFunction() {
   │   └── utils.ts
   └── tsconfig.json
 ```
+
 配置项如下：
+
 ```json
 {
-  "compilerOptions": {
-    "target": "ES6",
-    "module": "commonjs",
-    "declaration": true,
-    "outDir": "./dist"
-  },
-  "include": ["src/**/*"]
+    "compilerOptions": {
+        "target": "ES6",
+        "module": "commonjs",
+        "declaration": true,
+        "outDir": "./dist"
+    },
+    "include": ["src/**/*"]
 }
 ```
+
 在上述配置下，编译器会为每个 TypeScript 文件生成一个对应的`.d.ts`文件。例如：
+
 - `src/index.ts` -> `dist/index.d.ts`
 - `src/utils.ts` -> `dist/utils.d.ts`
 
 如果项目中包含 JavaScript 文件，启用`declaration`不会为 JavaScript 文件生成`.d.ts`文件，除非使用工具（如`tsc`的`--declaration`选项）手动生成。
+
 ### declarationDir
+
 字符串类型，通过设置`declarationDir`，用于指定生成的类型声明文件（`.d.ts`文件）的输出目录。这个选项允许你将类型声明文件输出到一个特定的目录，与编译后的 JavaScript 文件分开存放。`declarationDir`会保留源文件的目录结构，因此生成的`.d.ts`文件的目录层级与源文件相同。
 
 假设项目目录如下：
+
 ```text
 /project
   ├── src
@@ -535,77 +706,113 @@ export function utilityFunction() {
   │   └── utils.ts
   └── tsconfig.json
 ```
+
 配置项如下：
+
 ```json
 {
-  "compilerOptions": {
-    "target": "ES6",
-    "module": "commonjs",
-    "declaration": true,
-    "outDir": "./dist",
-    "declarationDir": "./types"
-  },
-  "include": ["src/**/*"]
+    "compilerOptions": {
+        "target": "ES6",
+        "module": "commonjs",
+        "declaration": true,
+        "outDir": "./dist",
+        "declarationDir": "./types"
+    },
+    "include": ["src/**/*"]
 }
 ```
+
 在上述配置下，TypeScript 编译器会：
+
 - 将编译后的 JavaScript 文件输出到`./dist`目录。
-  - `src/index.ts` -> `dist/index.js`
-  - `src/utils.ts` -> `dist/utils.js`
+    - `src/index.ts` -> `dist/index.js`
+    - `src/utils.ts` -> `dist/utils.js`
 - 将生成的`.d.ts`文件输出到`./types`目录。
-  - `src/index.ts` -> `types/index.d.ts`
-  - `src/utils.ts` -> `types/utils.d.ts`
+    - `src/index.ts` -> `types/index.d.ts`
+    - `src/utils.ts` -> `types/utils.d.ts`
+
 ### declarationMap
+
 布尔值，启用`declarationMap`后，TypeScript 编译器会为每个生成的`.d.ts`文件创建一个对应的`.d.ts.map`文件。存放位置和`.d.ts`文件相同。
+
 ### emitDeclarationOnly
+
 布尔值，启用`emitDeclarationOnly`后，编译器只会输出类型声明文件，而不会生成对应的 JavaScript 文件。
+
 ## 支持 JavaScript
+
 ### allowJs
+
 布尔值，启用`allowJs`后，TypeScript 编译器会将`.js`文件视为输入文件，并将它们与 TypeScript 文件一起编译。可以在同一个项目中混合使用`.ts`和`.js`文件，这对于逐步迁移项目非常有帮助。并且通过`outDir`指定编译后的文件输出目录，这样`.js`文件和`.ts`文件都会被编译并输出到指定目录。
 
 通过`import`可以让ts、js文件相互引用：
+
 - ts文件导入js文件
+
 ```javascript
 // src/main.ts
-import {add} from "./add"
+import { add } from './add';
 ```
+
 - js文件导入ts文件
+
 ```javascript
 // src/main.js
-import {add} from "./add"
+import { add } from './add';
 ```
+
 默认情况下 后，TypeScript 编译器会自动寻找`src/add.ts`和`src/add.d.ts`，它不会去考虑`src/add.js`，可以通过将 allowJS 设置为`true`来更改这一默认行为。
 
 ### checkJs
+
 布尔值，启用这个选项后，TypeScript 编译器会对项目中的`.js`文件执行类型检查，帮助识别和报告代码中的一些常见错误和潜在问题。
 
 `checkJs`通常与`allowJs`一起使用，以便 TypeScript 编译器能够处理和检查 JavaScript 文件。
 
 ## Source Map
+
 ### sourceMap
+
 布尔值，启用 sourceMap 后，TypeScript 编译器会为每个编译后的 JavaScript 文件生成一个对应的`.map`文件。`.map`文件允许开发者在调试工具中查看和导航回 TypeScript 源代码，而不是仅查看编译后的 JavaScript 代码。
+
 ### inlineSourceMap
-布尔值，启用`inlineSourceMap`后，TypeScript 编译器会将源映射信息会以`//#soureMappingURL=`开头，然后接 base64 字符串的形式插入到 JavaScript 文件的末尾，而不是创建一个单独的`.map`文件。
+
+布尔值，启用`inlineSourceMap`后，TypeScript 编译器会将源映射信息会以`//# sourceMappingURL=`开头，然后接 base64 字符串的形式插入到 JavaScript 文件的末尾，而不是创建一个单独的`.map`文件。
+
 ### sourceRoot
+
 指定转换前文件所在的目录。如果与转换前的文件在同一目录，该项为空；该选项会影响`.map`文件中的`sourceRoot`属性，且这个值会被写进`.map`文件里
-### 
+
+### mapRoot
+
 指定生成的源映射文件（`.map`文件）的输出目录。这个选项可以帮助开发者将源映射文件集中到一个特定的目录中，与编译后的 JavaScript 文件分开存放。该选项会影响`.map`文件中的`sources`属性
+
 ### inlineSources
+
 布尔值，启用`inlineSources`后，TypeScript 编译器会将源代码直接嵌入到生成的源映射文件中。这意味着源代码将直接嵌入到源映射文件中，而不是依赖于源文件的外部位置。这种方式可以提高调试过程的便利性，因为所有必要的信息都包含在源映射中。需要与`sourceMap`一起使用，以生成包含源代码的源映射文件。
 
 在生产环境中，通常需要谨慎使用内联源代码，以避免源代码泄露。可以在开发阶段使用内联源代码，而在生产阶段使用外部源文件。
 
-
 ### forceConsistentCasingInFileNames
+
 设置为`true`表示引入的文件名必须和文件系统中的文件名大小写一致
+
 ## 类型检查
+
 ### strict
+
 所有严格检查的总开关，即下面所有配置都为`true`
+
 ### noImplicitAny
+
 不允许隐式的 any 类型
+
 ### strictNullChecks
+
 当设为 true 时，null 和 undefined 值不能赋值给非这两种类型的值，别的类型的值也不能赋给他们，除了 any 类型，还有个例外就是 undefined 可以赋值给 void 类型
+
 ### strictFunctionTypes
+
 当`strictFunctionTypes`为`true`时，用来指定是否使用函数参数双向协变检查
 
 Typescript 参数默认是双向协变的，这意味着它们既可以是协变的，也可以是逆变的
@@ -616,18 +823,20 @@ Typescript 参数默认是双向协变的，这意味着它们既可以是协变
 ```typescript
 //strictFunctionTypes: false
 interface Animal {
-  name: string
+    name: string;
 }
 interface Dog extends Animal {
-  breeds: string[]
+    breeds: string[];
 }
-let getDogName = (dog: Dog) => dog.name
-let getAnimalName = (animal: Animal) => animal.name
+let getDogName = (dog: Dog) => dog.name;
+let getAnimalName = (animal: Animal) => animal.name;
 
-getDogName = getAnimalName;  // Okay
-getAnimalName = getDogName;  // Okay
+getDogName = getAnimalName; // Okay
+getAnimalName = getDogName; // Okay
 ```
+
 上面的代码运行时并没有提示错误，默认情况下参数是双向协变比较的。超类型 getAnimalName 和子类型 getDogName 的方法可以相互分配。如果 strictFunctionTypes 设置为 true，则 Typescript 的参数进行逆变比较
+
 ```typescript
 //strictFunctionTypes : true
 interface Animal {
@@ -646,11 +855,17 @@ Type '(dog: Dog) => string' is not assignable to type '(animal: Animal) => strin
 Types of parameters 'dog' and 'animal' are incompatible.
 Property 'breeds' is missing in type 'Animal' but required in type 'Dog'
 ```
+
 这里，getAnimalName 是比 getDogName 更广泛的函数。因此，在这种情况下，无法将超类型分配给子类型。但是，可以将子类型分配给超类型。大多数时候，函数参数应该是逆变的，而不是双向协变的。如果启用这个编译选项，Typescript 将不会将函数参数视为双向协变
+
 ### strictBindCallApply
+
 设为`true`后严格检测`bind`、`call`和`apply`绑定方法的参数
+
 ### strictPropertyInitialization
+
 设为 true 后会检查类的非 undefined 属性是否已经在构造函数里初始化，如果要开启这项，需要同时开启 strictNullChecks，默认为 false
+
 ```typescript
 class User {
     name: string; // success
@@ -663,86 +878,127 @@ class User {
 // 报错：
 error TS2564: Property 'age' has no initializer and is not definitely assigned in the constructor.
 ```
+
 在上面的代码块中有一个 User 类，Typescript 要求要么初始化定义的属性，要么指定一个`undefined`类型。因此，当编译上面的代码时，将会提示错误
+
 ### noImplicitThis
+
 当 this 表达式的值为 any 类型的时候，生成一个错误
+
 ### useUnknownInCatchVariables
+
 在 Javascript 中，可以抛出错误并在`catch`中捕获它。通常这会将`error`实例设置为`any`
 
 将`useUnknownInCatchVariable`编译选项设置为`true`时，它会隐式地将`catch`中的任何变量设置为 unknown 而不是 any
 
 比如下面的例子：
+
 ```javascript
 try {
-    throw 'myException'; 
-}
-catch (err) {
-    console.error(err.message); 
+    throw 'myException';
+} catch (err) {
+    console.error(err.message);
 }
 // 当编译上述代码时，它会将 err 更改为 unknown 类型。因此会提示以下错误
 // error TS2571: Object is of type 'unknown'.
 
-// 产生此错误是因为 Typescript 将 err 设置为 unkown。可以通过以下方式来修复此错误：
+// 产生此错误是因为 Typescript 将 err 设置为 unknown。可以通过以下方式来修复此错误：
 // 将 err 从 unknown 缩小到 error 实例
 try {
-    throw 'myException'; 
-}
-catch (err) {
-  if (err instanceof Error) {
-    console.error(err.message);
-  }
+    throw 'myException';
+} catch (err) {
+    if (err instanceof Error) {
+        console.error(err.message);
+    }
 }
 ```
+
 ### alwaysStrict
+
 设置为`true`，指定始终以严格模式检查每个模块，并且在编译之后的JS文件中加入`"use strict"`字符串，用来告诉浏览器该JS为严格模式
+
 ### noUnusedLocals
+
 用于检查是否定义了但是没有使用的变量，对于这一点的检测，使用ESLint可以在你书写代码的时候做提示，你可以配合使用，默认值为 false
+
 ### noUnusedParameters
+
 用于检测是否在函数中没有使用的参数
+
 ### exactOptionalPropertyTypes
+
 当启用`exactOptionalPropertyTypes`时，必须首先使用`undefined`类型对属性进行注释
 
 设置为`true`时
+
 ```typescript
 interface Test {
-  property?: string
+    property?: string;
 }
-const test1: Test = {}
-console.log("property" in test1) // error
+const test1: Test = {};
+console.log('property' in test1); // error
 
 // 要解决这个问题可以这样
-const test2: Test = { property: undefined }
-console.log("property" in test2)  // success
+const test2: Test = { property: undefined };
+console.log('property' in test2); // success
 
 // 还可以显示声明成 undefined 类型
 interface Test {
-  property?: string | undefined
+    property?: string | undefined;
 }
-const test1: Test = {}
-console.log("property" in test1) // success
+const test1: Test = {};
+console.log('property' in test1); // success
 ```
+
 ### noImplicitReturns
+
 用于检查函数是否有返回值，设为`true`后，如果函数没有返回值则会提示，默认为`false`
+
 ### noFallthroughCasesInSwitch
+
 用于检查`switch`中是否有`case`没有使用`break`跳出`switch`，默认为`false`
+
 ### noPropertyAccessFromIndexSignature
+
 使用索引签名的键，访问时必须使用索引访问器，即`xxx['yyy']`
+
 ```typescript
 interface Obj {
-  [key: string]: string
+    [key: string]: string;
 }
-const obj: Obj = {}
+const obj: Obj = {};
 // 只能使用 obj['age'] 访问，obj.age 会报错
-obj['age'] // success
-obj.age // error
-
+obj['age']; // success
+obj.age; // error
 
 //  如果在 obj 中 声明了 age，即
-const obj: Obj = { age: '123' }
-obj['age'] // success
-obj.age // success
+const obj: Obj = { age: '123' };
+obj['age']; // success
+obj.age; // success
 ```
+
 ### allowUnreachableCode
+
 设置为`false`后对于永远无法触达的代码发出警告，设置为`true`后会忽略无法触达的代码
 
 例如在`return`语句之后的代码。将这个编译选项设置为`false`时，将发出警告
+
+## 其他配置选项
+
+### ignoreDeprecations
+
+字符串，指定要忽略的废弃警告。可以设置为 `"5.0"` 来忽略 TypeScript 5.0 中所有已废弃功能的警告，或指定具体的废弃警告代码。
+
+### 已废弃的配置项
+
+以下配置项在 TypeScript 5.0+ 中已废弃，不建议使用：
+
+- `charset`：已废弃，现代环境使用 UTF-8。
+- `keyofStringsOnly`：已废弃，使用更精确的 keyof 类型。
+- `noImplicitUseStrict`：已废弃，使用 `alwaysStrict` 替代。
+- `suppressExcessPropertyErrors`：已废弃，使用类型断言或接口扩展。
+- `suppressImplicitAnyIndexErrors`：已废弃，启用 `noImplicitAny` 进行更严格的检查。
+- `noStrictGenericChecks`：已废弃，使用更精确的泛型检查。
+
+> 注意：本文档基于 TypeScript 5.0+ 版本。对于旧版本 TypeScript，某些选项可能不可用。建议查阅官方文档获取最新信息。
+
