--- a/src/blogs/前端基础/TypeScript/2. 高级类型/6. d.ts声明文件.md
+++ b/src/blogs/前端基础/TypeScript/2. 高级类型/6. d.ts声明文件.md
@@ -1,9 +1,15 @@
 # d.ts声明文件
 
 ## 前言
-> 如果要生成声明文件需在 tsconfig.json 中将`declaration`设置为`true`
+
+要生成 TypeScript 声明文件，需要在 tsconfig.json 中将 `declaration` 选项设置为 `true`。
+
 ### npm包中设置导出的d.ts
-在`package.json`里添加`"types": ".d.ts文件位置"`就可以让别人使用当前npm包的时候得到类型提示。但是其实这里也可以直接填入源码文件，也就是`"types": "index.ts"`，这样不仅能得到类型，甚至在某些编辑器里可以点进源码里
+
+在 `package.json` 中添加 `types` 字段，指向声明文件的位置（例如 `"types": "./lib/main.d.ts"`），这样其他开发者在安装你的 npm 包时就能获得完整的类型提示。
+
+你也可以直接指向 TypeScript 源码文件（例如 `"types": "index.ts"`），这样不仅能提供类型信息，在某些编辑器中还能直接查看和跳转到源码实现。**注意**：直接指向 `.ts` 文件需要确保源码不包含需要编译的 TypeScript 特性，建议使用编译后的 `.d.ts` 文件以获得更好的兼容性。
+
 ```json
 {
     "name": "awesome",
@@ -13,298 +19,586 @@
     "types": "./lib/main.d.ts"
 }
 ```
-注意
-- `typings`与`types`具有相同的意义，也可以使用它
-- 如果声明文件名是`index.d.ts`并且位置在包的根目录里（与`index.js`并列），就不需要指定了 types 属性
-## 声明文件修饰符
+
+#### `exports` 字段（TypeScript 4.7+）
+
+TypeScript 4.7+ 支持 `package.json` 中的 `exports` 字段，可以更精细地控制模块导出，同时支持 ESM 和 CJS 双模式：
+
+```json
+{
+    "name": "my-package",
+    "version": "1.0.0",
+    "exports": {
+        ".": {
+            "import": {
+                "types": "./dist/esm/index.d.ts",
+                "default": "./dist/esm/index.js"
+            },
+            "require": {
+                "types": "./dist/cjs/index.d.ts",
+                "default": "./dist/cjs/index.js"
+            }
+        },
+        "./styles": {
+            "import": "./dist/esm/styles.css",
+            "require": "./dist/cjs/styles.css"
+        }
+    }
+}
+```
+
+**注意：**
+
+- `exports` 字段中的 `types` 子字段用于指定类型声明文件的位置
+- `typings` 字段与 `types` 字段含义相同，可以互换使用
+- 如果声明文件名为 `index.d.ts` 且位于包的根目录，TypeScript 会自动查找该文件，但显式指定 `types` 字段是更好的实践
+- 使用 `exports` 字段时，`main`、`module`、`types` 等字段通常会被忽略，但为了向后兼容，建议同时保留这些字段
+
+#### 版本兼容性提示
+
+在声明文件中使用新特性时，建议通过 `typesVersions` 字段提供多版本支持：
+
+```json
+{
+    "typesVersions": {
+        ">=4.1": {
+            "*": ["types/ts4.1/*"]
+        },
+        ">=5.0": {
+            "*": ["types/ts5.0/*"]
+        }
+    }
+}
+```
+
+## `d.ts`声明文件中的修饰符
+
 ### export
+
 `export`主要用于模块内部，将模块内定义的类型暴露给外部使用。
 
 #### `export =`
+
 `export =` 是 CommonJS 和 AMD 模块系统中的导出语法，它将**整个模块**导出为一个单一的值，可以是对象、函数、类等。在导入时，需要使用`import = require()`语法。
+
 ```typescript
 // 定义一个模块文件 utils.ts
 function add(a: number, b: number) {
-  return a + b
+    return a + b;
 }
 
 // 使用 export = 导出整个模块
-export = add
+export = add;
 
 // 在另一个文件中导入
-import addFunction = require('./utils')
-console.log(addFunction(1, 2))
+import addFunction = require('./utils');
+console.log(addFunction(1, 2));
 ```
-- 当使用`export =`时，不能再使用`export default`或其他命名导出，因为`export =`已经将整个模块导出为一个单一的值
-- 若从使用`export =`导出的模块中导入，不能使用 ES6 的`import`语法，必须使用`import = require()`语法
+
+- 当使用 `export =` 时，不能再使用 `export default` 或其他命名导出，因为 `export =` 已将整个模块导出为单个值
+- 从使用 `export =` 导出的模块导入时，不能使用 ES6 的 `import` 语法，必须使用 `import = require()` 语法
 
 ### declare
-`declare`用于告诉 TypeScript 编译器某个变量、函数、类、接口等的类型信息；但不包含具体的实现代码，所以一定要在运行时给定义的全局变量、函数等赋值。
 
-`declare`既可以用于声明全局的类型信息，也可以在模块内部声明局部的类型信息：
-- 在 TypeScript 里，一个文件如果没有`import`、`export`语句，则说明这个文件是一个全局文件（非模块文件）；使用`declare`声明的类型都是全局类型，可以被项目内的其他 TypeScript 文件直接使用，
-- 一旦文件中存在`import`或`export`语句，该文件会被视为模块，其内部声明的类型也会变成模块内部的类型，失去全局可见性。除非使用`export`导出。
+`declare` 用于告诉 TypeScript 编译器某个变量、函数、类或接口的类型信息，但不包含具体实现代码。因此，需要在运行时为这些声明的全局变量、函数等提供实际实现。
+
+`declare` 既可以用于声明全局类型信息，也可以在模块内部声明局部类型信息：
+
+- **全局声明**：如果一个 TypeScript 文件没有 `import` 或 `export` 语句，它被视为全局文件（非模块文件）。在此文件中使用 `declare` 声明的类型都是全局类型，可以被项目中的其他 TypeScript 文件直接使用。
+- **模块内声明**：如果文件中包含 `import` 或 `export` 语句，它被视为模块。此时在模块内使用 `declare` 声明的类型只在该模块内可见，除非使用 `export` 导出。
 
 #### 注意
-TypeScript 编译器对 declare 的使用会更宽松，允许在`.d.ts`中出现有具体实现的写法，但实际上它会把这种写法当作类型声明来处理。
-## 声明全局类型
-### 声明全局接口类型
-```bash
-interface xxx/type xxx
-```
-- 使用`interface`和`type`时也可以加`declare`，推荐是不加。
-- 为什么可以不加？
-   - 加`declare`的原因是有些关键字 JavaScript 中也有实现，加上的作用是让 TypeScript 知道这是一个类型声明
-### 声明一个全局变量
+
+TypeScript 编译器对 `declare` 的使用较为宽松，允许在 `.d.ts` 文件中出现类似具体实现的写法，但实际上会将其视为类型声明处理。
+
+
+### import type 和 export type
+
+TypeScript 3.8+ 引入了 `import type` 和 `export type` 语法，用于明确表示只导入/导出类型，不会引入运行时代码。
+
 ```typescript
-declare let xxx
-declare const xxx
+// 只导入类型
+import type { SomeType } from './some-module';
+import type { ComponentProps } from 'react';
+
+// 只导出类型
+export type { User, Post } from './types';
+
+// 在 .d.ts 文件中的使用
+declare module 'my-module' {
+    import type { ExistingType } from 'original-module';
+    export interface MyType extends ExistingType {
+        newField: string;
+    }
+}
 ```
-假如在项目中引入了一个微信的 SDK，里面有一些全局的对象（比如wx），如果不经过声明，在ts文件里面直接用`wx.config()`会报错，所以可以如下声明
+
+优点：
+
+- **明确意图**：清晰表明只涉及类型，不涉及运行时
+- **避免循环依赖**：类型导入不会导致模块间的运行时依赖
+- **Tree-shaking 友好**：帮助打包器识别纯类型导入
+
+注意：在 `.d.ts` 声明文件中，通常使用 `import type` 来避免引入不必要的运行时依赖。
+
+## 声明全局类型
+
+### 声明全局接口类型
+
+```typescript
+interface MyGlobalInterface {
+    name: string;
+    value: number;
+}
+
+type MyGlobalType = string | number;
+```
+
+- 使用 `interface` 和 `type` 定义类型时，通常不需要加 `declare`，因为 TypeScript 能识别它们为类型声明关键字
+- **何时需要加 `declare`？**
+    - 对于变量、函数、类等运行时实体，需要使用 `declare` 来声明其类型而不提供具体实现
+    - `interface` 和 `type` 本身定义的是纯类型，不需要 `declare` 修饰
+
+### 声明一个全局变量
+
+```typescript
+// 声明一个可变的全局变量
+declare let globalCounter: number;
+
+// 声明一个不可变的全局常量
+declare const APP_VERSION: string;
+
+// 声明一个全局对象
+declare const globalConfig: {
+    apiUrl: string;
+    timeout: number;
+};
+```
+
+例如，在项目中引入微信 SDK 后，会有一个全局对象 `wx`。如果不进行类型声明，在 TypeScript 文件中直接使用 `wx.config()` 会报错。可以按如下方式声明：
+
 ```typescript
 interface Wx {
-    config: () => void
+    config: () => void;
 }
-declare const wx: Wx
+declare const wx: Wx;
 ```
+
 ### 声明全局方法
+
 ```typescript
-declare function xxx
+// 声明全局函数
+declare function logMessage(message: string): void;
 
-// 举例：声明一个全局的 test 方法
-declare function test(name: string): string
+// 声明带参数的全局函数
+declare function calculateSum(a: number, b: number): number;
 
-// 函数重载
-declare function getWidget(n: number): Widget
-declare function getWidget(s: string): Widget[]
+// 函数重载示例
+declare function processInput(input: string): string;
+declare function processInput(input: number): number[];
+declare function processInput(input: boolean): boolean;
 ```
+
 ### 声明全局类
-```bash
-declare class xxx
+
+```typescript
+declare class MyGlobalClass {
+    constructor(name: string);
+    getName(): string;
+    static create(): MyGlobalClass;
+}
 ```
+
 ### 声明全局枚举类型
-```bash
-declare enum xxx
+
+```typescript
+declare enum MyGlobalEnum {
+    Up = 1,
+    Down,
+    Left,
+    Right,
+}
 ```
+
 ### 声明全局对象
+
 ```typescript
-declare namespace xxx
+// 声明一个命名空间（全局对象）
+declare namespace MyApp {
+    // 命名空间内的类型
+    export interface Config {
+        version: string;
+        debug: boolean;
+    }
+
+    // 命名空间内的变量
+    export const defaultConfig: Config;
+
+    // 命名空间内的函数
+    export function initialize(config: Partial<Config>): void;
+}
 ```
+
 比如声明一个 JQuery 对象
+
 ```typescript
 declare namespace JQuery {
-  type cssSelect = {
-    css: (key: string, value: string) => cssSelect
-  }
+    type cssSelect = {
+        css: (key: string, value: string) => cssSelect;
+    };
 }
 ```
+
 声明完成后就可以在其他地方直接使用`JQuery`类型，但是不能直接使用`JQuery.cssSelect`类型
+
 #### 如何使用对象内属性对应的类型
+
 如果想要引用`JQuery`中的`cssSelect`类型，则需要在`cssSelect`前加上`export`关键字
+
 ```typescript
 declare namespace JQuery {
-  export type cssSelect = {
-    css: (key: string, value: string) => cssSelect
-  }
+    export type cssSelect = {
+        css: (key: string, value: string) => cssSelect;
+    };
 }
 ```
+
 此时就可以直接使用`JQuery.cssSelect`类型了
 
 需要注意的是，在命名空间（`namespace`）中定义的类型前面不能加`declare`关键字，但是可以加`export`关键字，比如
+
 ```typescript
 declare namespace JQuery {
-  export function $(ready: () => void): void // success
-  // error：不能在已有的环境上下文中使用 "declare" 修饰符
-  declare function $1(ready: () => void): void
+    export function $(ready: () => void): void; // success
+    // error：不能在已有的环境上下文中使用 "declare" 修饰符
+    declare function $1(ready: () => void): void;
 }
 ```
+
+### 声明全局装饰器类型
+
+TypeScript 5.0 实现了新的装饰器标准，但以下示例展示了传统的装饰器类型定义（仍然被广泛使用）：
+
+```typescript
+// 类装饰器
+declare type ClassDecorator = <TFunction extends Function>(
+    target: TFunction,
+) => TFunction | void;
+
+// 方法装饰器
+declare type MethodDecorator = <T>(
+    target: Object,
+    propertyKey: string | symbol,
+    descriptor: TypedPropertyDescriptor<T>,
+) => TypedPropertyDescriptor<T> | void;
+
+// 使用示例
+declare function sealed(constructor: Function): void;
+```
+
 ## 在已有的全局对象类型中扩展属性
-### 新增全局变量 
+
+### 新增全局变量
+
+在 TypeScript 中声明全局变量时，需要注意文件是否为模块（包含 import/export 语句）。
+
 ```typescript
-// 模块文件中不能省略 declare global
+// 在模块文件（有 import/export 的文件）中必须使用 declare global
 declare global {
-  const myGlobalVar: string // 将能在全局直接使用 myGlobalVar
+    const myGlobalVar: string; // 将能在全局直接使用 myGlobalVar
 }
 
-// 非模块文件中可以省略 declare global
-declare const myGlobalVar: string // 将能在全局直接使用 myGlobalVar
-
+// 在非模块文件（没有 import/export 的文件）中，可以直接在顶层使用 declare
+// 注意：全局声明需要在 TypeScript 编译器能够访问的文件中（如在 tsconfig.json 的 include/files 中）
+declare const myGlobalVar: string; // 将能在全局直接使用 myGlobalVar
 ```
+
 ### 扩展 Window
+
 ```typescript
-// 模块文件中不能省略 declare global
+// 在模块文件（有 import/export 的文件）中必须使用 declare global
 declare global {
-  interface Window {
-    myGlobalVar: string // 将能在全局使用 window.myGlobalVar
-  }
-}
-// 非模块文件中可以省略 declare global
-declare interface Window {
-  myGlobalVar: string // 将能在全局使用 window.myGlobalVar
-}
-```
-### 扩展 Node 的 global
-```typescript
-// 模块文件中不能省略 declare global
-declare global {
-  namespace NodeJS {
-    interface Global {
-      myGlobalVar: string // 将能在全局使用 global.myGlobalVar
+    interface Window {
+        myGlobalVar: string; // 将能在全局使用 window.myGlobalVar
     }
-  }
 }
-// 非模块文件中可以省略 declare global
-declare namespace NodeJS {
-  interface Global {
-    myGlobalVar: string // 将能在全局使用 global.myGlobalVar
-  }
+
+// 在非模块文件（没有 import/export 的文件）中，可以直接使用 declare interface
+// 注意：全局声明需要在 TypeScript 编译器能够访问的文件中
+declare interface Window {
+    myGlobalVar: string; // 将能在全局使用 window.myGlobalVar
 }
 ```
+
+### 扩展 Node.js 的全局对象
+
+在 Node.js 16+ 中，全局对象的类型定义发生了变化，推荐使用 `globalThis` 进行扩展。对于旧版本 Node.js，可以扩展 `NodeJS.Global` 接口。
+
+```typescript
+// 方法一：使用 globalThis（推荐，适用于 Node.js 16+ 和现代浏览器）
+declare global {
+    var myGlobalVar: string; // 将能在全局使用 globalThis.myGlobalVar 或直接使用 myGlobalVar
+}
+
+// 方法二：扩展 global 命名空间（兼容旧版本）
+declare global {
+    namespace NodeJS {
+        interface Global {
+            myGlobalVar: string; // 将能在全局使用 global.myGlobalVar（Node.js 15 及以下）
+        }
+    }
+}
+
+// 注意：在模块文件中必须使用 declare global，非模块文件中可以省略
+```
+
 ## 声明模块
+
 使用`declare module`语法可以为现有的 JavaScript 模块提供类型声明，使得 TypeScript 项目能够正确识别和使用这些模块，主要用途有：
+
 - 为第三方库添加类型声明：当使用的第三方 JavaScript 库没有自带类型声明文件（d.ts）时，可以使用`declare module`手动为其编写类型声明，让 TypeScript 编译器能够对这些库的使用进行类型检查。
 - 自定义模块类型声明：如果有自定义的 JavaScript 模块，也可以使用`declare module`为其定义类型，方便在 TypeScript 代码中使用。
 
 基本语法如下：
+
 ```typescript
-// 当模块名具有一定的规律时，可以使用通配符 * 来匹配多个模块
-declare module '模块名'或'模块名前缀*' {
-  // 模块内部的类型声明
-  // 可以声明变量、函数、类、接口等
-  // 如果不添加 export，意味着这个变量仅在该模块的类型声明内部可见
-  export const 变量名: 类型
-  export function 函数名(参数: 类型): 返回值类型
-  export class 类名 {
-    constructor(参数: 类型)
-    方法名(参数: 类型): 返回值类型
-  }
-  export interface 接口名 {
-    属性名: 类型
-  }
-  // 还可以有默认导出
-  export default 默认导出的类型
+// 声明具体模块
+declare module '模块名' {
+    // 模块内部的类型声明
+    export const 变量名: 类型;
+    export function 函数名(参数: 类型): 返回值类型;
+    export class 类名 {
+        constructor(参数: 类型);
+        方法名(参数: 类型): 返回值类型;
+    }
+    export interface 接口名 {
+        属性名: 类型;
+    }
+    // 默认导出
+    export default 默认导出的类型;
+}
+
+// 通配符模块声明（TypeScript 2.0+）
+declare module '*.css' {
+    const content: string;
+    export default content;
+}
+
+// TypeScript 4.1+ 支持更精确的通配符模式
+declare module '*.module.css' {
+    const classes: { readonly [key: string]: string };
+    export default classes;
+}
+
+declare module '*.png' {
+    const src: string;
+    export default src;
+}
+
+// 重新导出模式
+declare module 'short-module-name' {
+    export * from 'original-long-module-name';
+    export { default } from 'original-long-module-name';
 }
 ```
+
 ### 扩充第三方模块的类型声明
+
 扩充第三方模块类型声明是指在不改变原有声明的基础上，为模块添加新的属性、方法或类型。主要通过模块扩充（Module Augmentation）的方式来实现，这种方式允许你在现有的模块类型上添加额外的定义。
+
 #### 扩充 lodash 模块
+
 假设使用了`lodash`这个第三方模块，要为其添加一个新的类型。首先，创建一个类型声明文件，例如`lodash-augmentation.d.ts`：
+
 ```typescript
-// 引入 lodash 模块，确保 TypeScript 了解该模块的现有类型
-import * as _ from 'lodash'
+// 使用 import type 避免循环依赖，只导入类型信息
+import type * as _ from 'lodash';
 
 declare module 'lodash' {
-  interface LoDashStatic {
-    // 添加一个新的方法类型
-    myCustomMethod(arg: string): string
-  }
+    interface LoDashStatic {
+        // 添加一个新的方法类型
+        myCustomMethod(arg: string): string;
+    }
 }
 ```
-上述例子中，可以不添加`mport * as _ from 'lodash'`，但建议是加上。原因如下：
-- 增强代码可读性
-- 方便类型引用和检查：导入模块后，可以在类型扩充文件中使用模块内现有类型进行更复杂的类型定义和检查。
+
+上述例子中，如果不需要引用 lodash 内部的类型，可以不添加导入语句。但如果需要在扩充中使用模块内的类型（如示例所示），建议只导入需要的类型：
+
 ```typescript
-import * as _ from 'lodash'
+import type { Dictionary, List } from 'lodash';
 
 declare module 'lodash' {
-  interface LoDashStatic {
-    // 可以使用 lodash 已有的类型进行参数和返回值的定义
-    anotherCustomMethod(arg: _.Dictionary<number>): _.List<number>
-  }
+    interface LoDashStatic {
+        anotherCustomMethod(arg: Dictionary<number>): List<number>;
+    }
 }
 ```
+
 #### 给导出内容是 Class 的模块扩展属性
-下面对`any-touch`的类型进行扩充，这里`any-touch`的默认导出是一个`Class`。假设对`any-touch`的代码做了如下修改：
-1. 导出增加`aaa`变量，是`string`类型
-2. 类的实例增加`bbb`属性，是`number`类型 
-3. 类增加静态属性`ccc`，是个函数
-```javascript
-import AnyTouch from 'any-touch'
 
+下面对`any-touch`的类型进行扩充，这里`any-touch`的默认导出是一个`Class`。假设对`any-touch`的代码做了如下修改：
+
+1. 导出增加`aaa`变量，是`string`类型
+2. 类的实例增加`bbb`属性，是`number`类型
+3. 类增加静态属性`ccc`，是个函数
+
+**注意**：以下示例展示了如何为模块添加新的导出和扩展默认导出的类。在实际项目中，建议将类型扩充放在单独的`.d.ts`文件中。
+
+```typescript
+// 在单独的 .d.ts 文件中（如 any-touch-augmentation.d.ts）
 declare module 'any-touch' {
     // 导出增加 "aaa"变量, 是个字符串
     export const aaa: string;
 
-    export default class {
-      // 类增加静态属性"ccc", 是个函数
-      static ccc:()=>void
-      // 类的实例增加"bbb"属性, 是number类型
-      bbb: number
+    // 扩展默认导出的类
+    export default class AnyTouch {
+        // 类增加静态属性"ccc", 是个函数
+        static ccc: () => void;
+        // 类的实例增加"bbb"属性, 是number类型
+        bbb: number;
     }
 }
 ```
-测试下：
+
+测试使用：
+
 ```typescript
-// index.ts
-import AT, {aaa} from 'any-touch'
+// index.ts - 使用扩充后的类型
+import AT, { aaa } from 'any-touch';
 
-const s = aaa.substr(0,1)
+const s = aaa.substr(0, 1); // aaa 是 string 类型
 
-const at = new AT()
-at.bbb = 123
+const at = new AT();
+at.bbb = 123; // bbb 是 number 类型
 
-AT.ccc = ()=>{}
+AT.ccc = () => {}; // ccc 是静态方法
 ```
+
 #### 扩充没有类型声明文件的模块
+
 假设有一个 myModule 模块没有类型声明，则可以通过下面这种方式扩充
+
 ```typescript
 declare module 'myModule' {
-  export function greet(name: string): string
-  // 添加新的类型
-  export function sayGoodbye(name: string): string
+    export function greet(name: string): string;
+    // 添加新的类型
+    export function sayGoodbye(name: string): string;
 }
 ```
+
 ### 覆盖第三方模块的类型声明
-覆盖第三方模块的类型声明相对复杂，因为 TypeScript 通常不鼓励直接覆盖原有声明，可能会导致类型不一致和潜在的错误。不过，可以通过一些技巧来实现类似覆盖的效果，例如创建一个新的类型声明文件并将其优先级提高。
 
-#### 覆盖 axios 模块的类型声明
-假设 axios 模块有一个默认的 AxiosRequestConfig 接口，想覆盖其中的某个属性类型。
+在 TypeScript 中，直接覆盖第三方模块的类型声明通常不被推荐，因为可能导致类型不一致和潜在的错误。TypeScript 的类型合并（declaration merging）机制允许扩展接口，但不能直接修改已有属性的类型。
+
+#### 理解类型合并机制
+
+TypeScript 支持接口合并：当多个同名接口在相同作用域中被声明时，它们的成员会被合并。但是，如果同名属性类型不同，会导致冲突错误。
+
+#### 正确扩展 axios 模块的类型
+
+如果要修改 axios 的 `AxiosRequestConfig` 接口，应该使用模块扩充（module augmentation）来扩展原始接口：
+
 ```typescript
-// 引入原始的 axios 模块类型
-import { AxiosRequestConfig as OriginalAxiosRequestConfig } from 'axios'
+// axios-augmentation.d.ts
+import 'axios';
 
-// 创建一个新的类型，继承原始类型并修改属性
-interface AxiosRequestConfig extends OriginalAxiosRequestConfig {
-  // 覆盖或修改某个属性的类型
-  timeout: number | string
-}
-
-// 声明模块并导出新的类型
 declare module 'axios' {
-  export { AxiosRequestConfig }
-}
-```
-### 扩充其他非ts、js文件的类型
-#### 扩充 vue 文件的类型
-ts只支持模块的导入导出，但是有些时候可能需要引入css/html等文件，这时候就需要用通配符让ts把他们当做模块, 下面是对`.vue`文件的导入支持(来自vue官方)：
-```typescript
-declare module '*.vue' {
-  import { DefineComponent } from 'vue'
-  const component: DefineComponent<{}, {}, any>
-  export default component
+    export interface AxiosRequestConfig {
+        // 扩展新属性
+        customField?: string;
+        // 注意：不能直接覆盖已有属性的类型，如 timeout 已经是 number
+        // 如果需要修改 timeout 类型，更好的做法是创建新的配置接口
+    }
 }
 
-// App.vue
-// 可以识别 vue 文件
-import X1 from './X1.vue';
-export default defineComponent({
-    components:{X1}
-})
+// 或者创建新的配置接口继承原接口
+export interface MyAxiosRequestConfig extends AxiosRequestConfig {
+    timeout: number | string; // 这会创建一个新接口，不会影响原始类型
+}
 ```
-声明把 vue 文件当做模块，同时标注模块的默认导出是"component"类型。这样在 vue 的 components 字段中注册模块才可以正确识别类型
-#### 扩充其他文件的类型
-在编辑ts文件的时候，如果想导入`.css`、`.less`、`.png`格式的文件，如果没有经过`declare`是会提示语法错误的
+
+#### 类型覆盖的替代方案
+
+如果必须修改现有属性类型，可以考虑以下方法：
+
+1. **使用类型断言**：在调用处进行类型转换
+2. **创建包装函数**：封装原始函数并提供新的类型签名
+3. **提交 PR 到 DefinitelyTyped**：修改官方类型定义
+
+注意：直接导出同名接口试图"覆盖"原有类型通常不会生效，因为 TypeScript 会进行接口合并，属性类型冲突时会产生错误。
+
+### 扩充其他非ts、js文件的类型
+
+#### 扩充 Vue 文件的类型（Vue 3）
+
+TypeScript 只支持模块的导入导出，对于 `.vue` 单文件组件，需要声明模块类型。以下是 Vue 3 的类型声明：
+
 ```typescript
-declare module '*.less'
-declare module '*.png'
+// vue-shim.d.ts
+declare module '*.vue' {
+    import { DefineComponent } from 'vue';
+    // Vue 3 组件类型定义
+    const component: DefineComponent<{}, {}, any, any, any, any>;
+    export default component;
+}
+
+// 或者使用更简化的版本
+declare module '*.vue' {
+    import { DefineComponent } from 'vue';
+    const component: DefineComponent<{}, {}, any>;
+    export default component;
+}
+
+// 对于使用 `<script setup>` 语法糖的组件
+declare module '*.vue' {
+    import { DefineComponent } from 'vue';
+    const component: DefineComponent;
+    export default component;
+}
+```
+
+使用示例：
+
+```vue
+<!-- App.vue -->
+<script setup lang="ts">
+import HelloWorld from './components/HelloWorld.vue';
+</script>
+
+<template>
+    <HelloWorld />
+</template>
+
+<!-- 或者使用 Options API -->
+<script lang="ts">
+import { defineComponent } from 'vue';
+import HelloWorld from './components/HelloWorld.vue';
+
+export default defineComponent({
+    components: { HelloWorld },
+    // ... 其他选项
+});
+</script>
+```
+
+声明 `.vue` 文件为模块后，TypeScript 能够正确识别导入的组件类型，在 `components` 字段中注册时也能获得类型提示。
+
+#### 扩充其他文件的类型
+
+在编辑 TypeScript 文件时，如果想导入 `.css`、`.less`、`.png` 等格式的文件，如果没有相应的 `declare` 声明，会导致语法错误。
+
+```typescript
+declare module '*.less';
+declare module '*.png';
 // 针对文件后缀声明类型，如使用 CSS Modules
 declare module '*.less' {
-  const styles: Record<string, string>
-  export = styles
+    const styles: Record<string, string>;
+    export = styles;
 }
 ```
-使用时可以直接通过`import`导入就不会提示语法错误
-```typescript
-import style from './style.css'
-```
 
+声明后，就可以直接使用 `import` 导入而不会出现语法错误。
+
+```typescript
+import style from './style.css';
+```
